--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@firebase/firestore": "^2.1.4",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.5.0",
+    "@react-native-firebase/auth": "^10.5.1",
     "@react-native-firebase/firestore": "^10.5.1",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "firebase": "^8.2.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-date-picker": "^3.2.9",
+    "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
+    "react-native-vector-icons": "^8.0.0",
     "react-navigation-drawer": "^2.6.0",
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.2.2",
