--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@firebase/firestore": "^2.1.4",
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.5.0",
@@ -34,6 +35,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-saga-firebase": "^0.15.0"
   },
