--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@firebase/firestore": "^2.1.4",
     "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.5.0",
@@ -31,6 +32,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
+    "react-native-sticky-parallax-header": "^0.4.0",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation-drawer": "^2.6.0",
     "react-navigation-stack": "^2.10.2",
