--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@firebase/firestore": "^2.1.4",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.5.0",
@@ -25,14 +26,20 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-calendar-strip": "^2.2.1",
+    "react-native-calendars": "^1.1254.0",
+    "react-native-calendars-dsg": "^2.0.5",
     "react-native-date-picker": "^3.2.9",
     "react-native-elements": "^3.1.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
     "react-native-sticky-parallax-header": "^0.4.0",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation-drawer": "^2.6.0",
     "react-navigation-stack": "^2.10.2",
