--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@firebase/firestore": "^2.1.4",
     "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^5.0.0",
@@ -21,6 +22,7 @@
     "@react-native-firebase/firestore": "^10.5.1",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.0",
     "firebase": "^8.2.5",
     "moment": "^2.29.1",
@@ -35,6 +37,7 @@
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "^0.27.1",
+    "react-native-neomorph-shadows": "^1.1.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
